fix: nowrap author name

--- a/themes/spichka/resources/styles/plugins/publishpress-authors.scss
+++ b/themes/spichka/resources/styles/plugins/publishpress-authors.scss
@@ -1,3 +1,7 @@
 .box-header-title {
   font-weight: $font-weight-x-bold;
 }
+
+a.author {
+  white-space: nowrap;
+}
